# rust-embed-for-web

./: Cargo.toml  README.md  readme.md
impl/: Cargo.toml
impl/src/: attributes.rs  compress.rs  dynamic.rs  embed.rs  lib.rs
src/: lib.rs
tests/: basic.rs  compression.rs  compression_without_zstd.rs  dynamic.rs  feature_zstd.rs  zstd.rs
utils/: Cargo.toml
utils/src/: config.rs  lib.rs
utils/src/file/: common.rs  dynamic.rs  embed.rs
