[package]
name = "rust-embed-for-web"
version = "9.0.1"
description = "Rust Macro which embeds files into your executable. A fork of `rust-embed` with a focus on usage on web servers."
readme = "readme.md"
documentation = "https://docs.rs/rust-embed"
repository = "https://github.com/pyros2097/rust-embed"
license = "MIT"
keywords = ["http", "embed", "static", "web", "server"]
categories = ["web-programming", "filesystem"]
edition = "2018"

[dependencies]
walkdir = "2.3.1"
rust-embed-for-web-impl = { version = "9.0.1", path = "impl" }
rust-embed-for-web-utils = { version = "10.0.0", path = "utils" }

[dev-dependencies]
chrono = "0.4"
flate2 = "1.0"
brotli = "3.3"
actix-web = "4.2"

[features]
default = []
# Even in debug mode use a release embed.
# We use this to test embed code in our tests.
always-embed = ["rust-embed-for-web-impl/always-embed"]


[workspace]
members = ["impl", "utils"]

[[test]]
name = "compression"
path = "tests/compression.rs"
required-features = ["always-embed"]
